@@ -1,3 +1,8 @@
+2016-05-01  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/command.c (link_command): Do not recalculate axis ranges after
+	"unset link" for an axis that was not linked anyhow.
+
 2016-04-27  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/fit.c (call_gnuplot):  More robust handling of undefined value
